console/app/assets/stylesheets/_forms.scss
/* ... */
// IMPORTANT FIELDS
// ---------------------------

.control-group-important {
  font-size: floor($baseFontSize + 1);
  input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], textarea, select, .uneditable-input, .add-on, .add-on-first, .add-on-last, .add-on-middle {
    font-size: floor($baseFontSize + 1);
    padding: 8px 10px;
  }
  label.control-label, label {
    font-size: floor($baseFontSize + 1);
  }
  .add-on.middle {
    padding-left: 0;
    padding-right: 0;
  }
  select {
    height: 36px;
  }
}

input[readonly],
select[readonly],
textarea[readonly] {
  cursor: inherit;
  color: #666 !important;
  background-color: inherit !important;
  border: 1px dotted #ccc !important;
  border-radius: 0 0 0 0 !important;
}
.input-copyable {
  -moz-box-sizing: border-box;
  background-color: inherit;
  border: 1px dotted #444444;
  border-radius: 0 0 0 0;
  color: #BABBBC;
  cursor: inherit;
  height: 28px;
  width: 100%;
}

// FORM-IMPORTANT
// ---------------------------
.form-important {
  .control-group { margin-bottom: 14px; }

  input.expand { width: auto; max-width: -moz-available; }
  input.narrow { width: 140px; }

  .controls > h3 { 
    margin-top: 5px; margin-bottom: 0;

    > small { margin-left: 10px; vertical-align: middle; display: inline-block; }
    > select { margin-top: -5px; }
  }

  .control-label { margin-left: 15px; text-align: left; color: #666; }
  .error > .control-label { color: $errorBackground; }

  .help-block { max-width: 500px; -moz-transition: 0.2s; overflow: hidden; text-overflow: ellipsis; font-size: $tinyFontSize;}
  .alert { max-width: 500px; }

  h3 .font-icon {margin-left: 10px}
}

@media (max-width: 767px) {
  .form-important {
    .control-label { margin-left: 0; }
    .controls { margin-left: 0; }
    .help-block { max-width: inherit; white-space: normal; }
    .alert { max-width: inherit; }
    .controls > h3 { display: inline-block; margin-top: 0; }
    .form-actions { padding-left: 0; }
  }
}

@media (max-width:480px) {
  .form-important {
    h3 .font-icon {margin-left: 10px}
  }
}

